@@ -1691,10 +1691,10 @@ padded using character p</p></td>
 <table cellspacing="0" cellpadding="0" width="98%" summary="package call">
 <tr>
 <td width="15%">&nbsp;</td>
-<td><p>Replace the characters in s between positions low l and hight h with substring b</p></td>
+<td><p>Replace the characters in s between positions low l and high h with substring b</p></td>
 </tr><tr>
 <td><p class="pkg_label">Example</p></td>
-<td><span class="code">strings.replace( s, 2, 3, , 'foo' ); -- if s is "1234", it is now "1foo34"</span></td>
+<td><span class="code">strings.replace_slice( s, 2, 3, , 'foo' ); -- if s is "1234", it is now "1foo34"</span></td>
 </tr><tr>
 <td><p class="pkg_label">Parameters</p></td>
 <td><table CELLSPACING=0 CELLPADDING=0 WIDTH="100%" border="0" >
